--- a/pom.xml
+++ b/pom.xml
@@ -13,10 +13,11 @@
 
     <groupId>com.ebibli</groupId>
     <artifactId>ebibli-backend</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <packaging>war</packaging>
 
     <properties>
+        <start-class>com.ebibli.MicrobibliApplication</start-class>
         <java.version>1.8</java.version>
         <org.mapstruct.version>1.3.1.Final</org.mapstruct.version>
         <org.projectlombok.version>1.16.14</org.projectlombok.version>
